programming monitor & account managment(client) feature